--- a/AnimationApp/Storyboards/Base.lproj/Main.storyboard
+++ b/AnimationApp/Storyboards/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfK-6Q-md6" customClass="SpringView" customModule="Spring">
                                 <rect key="frame" x="50" y="144" width="314" height="200"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-vC-hDQ">
-                                        <rect key="frame" x="133" y="88" width="48" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-vC-hDQ">
+                                        <rect key="frame" x="20" y="20" width="0.0" height="160"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" systemColor="systemGroupedBackgroundColor"/>
                                         <nil key="highlightedColor"/>
@@ -28,9 +28,10 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.40000000000000002" green="0.40392156862745099" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstItem="GCS-vC-hDQ" firstAttribute="leading" secondItem="jfK-6Q-md6" secondAttribute="leading" constant="20" id="K66-Gb-hK2"/>
+                                    <constraint firstItem="GCS-vC-hDQ" firstAttribute="top" secondItem="jfK-6Q-md6" secondAttribute="top" constant="20" id="R1Q-EE-Mlg"/>
                                     <constraint firstAttribute="height" constant="200" id="evy-2Z-Z1G"/>
-                                    <constraint firstItem="GCS-vC-hDQ" firstAttribute="centerY" secondItem="jfK-6Q-md6" secondAttribute="centerY" id="jyT-rT-3QQ"/>
-                                    <constraint firstItem="GCS-vC-hDQ" firstAttribute="centerX" secondItem="jfK-6Q-md6" secondAttribute="centerX" id="xDw-Qm-dE7"/>
+                                    <constraint firstAttribute="bottom" secondItem="GCS-vC-hDQ" secondAttribute="bottom" constant="20" id="pgR-k7-OT5"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
